--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 #db.config
 user        = 'postgres'
-host        = 'localhost'
-database    = 'postgres'
-password    = 'postgres'
-db_port     = '5432'
+host        = 'containers-us-west-83.railway.app'
+database    = 'railway'
+password    = 'Yy8VHGr3mxTvPypifQBQ'
+db_port     = '6706'
 
 #app
 PORT    = '1200'
