--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 #db.config
 user        = 'postgres'
-host        = 'containers-us-west-83.railway.app'
+host        = 'containers-us-west-150.railway.app'
 database    = 'railway'
-password    = 'Yy8VHGr3mxTvPypifQBQ'
-db_port     = '6706'
+password    = 'DnKAe4mJzpqVIJy4yV2D'
+db_port     = '5891'
 
 #app
 PORT    = '1200'
